# cod-insa-2014

./: .gitignore  README  README.md
AIs/CDL/: monIA.java
AIs/Strasbourg/ai - Copie/: build.xml
AIs_Final/insaRouen/src/: Attaque.java  Defense.java  IRoleChasseur.java  RouenAI.java  RouenAI2.java  RouenAI3.java
JavaClient/src/: Main.java
JavaClient/src/proxy/: Plane.java  Proxy.java
PlaneSim/src/: Main.java
PlaneSim/src/ai/: AI.java  Decision.java  Human.java  NetworkAI.java
PlaneSim/src/common/: CloneView.java  ListView.java  Util.java
PlaneSim/src/display/: BaseDisplay.java  MainWindow.java  PlaneDisplay.java  PolygonShape.java  SimDisplayPanel.java  ViewTransform.java
PlaneSim/src/model/: AutoPilot.java  Base.java  Coord.java  Entity.java  Plane.java  Sim.java  World.java
PlaneSim/src/players/: Action.java  LocalHumanPlayer.java  NetworkPlayer.java  Player.java
PlaneSim/src/view/: BaseView.java  EntityView.java  MainWindow.java  Pixel.java  PlaneView.java  PolygonShape.java  SimViewPanel.java  ViewTransform.java
PlaneSimClientAPI/src/: Main.java
PlaneSimModel/src/: PlaneModel.java
PlaneSimServer/src/: Main.java
PlaneSimThriftGeneration/src/: Coord.java  InvalidActionException.java
cod-insa-2014/Eval/: evaler.cabal  executor.rb
cod-insa-2014/Eval/src/: Evaluator.hs
cod-insa-2014/Eval/test/: EvaluatorSpec.hs
cod-insa-2014/PlaneSimC++/: AbstractAi.cpp  AbstractAi.h  Makefile  main.cpp  models.h
cod-insa-2014/PlaneSimProxy/: tojar.xml
cod-insa-2014/PlaneSimServer/: tojar.xml
cod-insa-2014/PlaneSimThriftGeneration/: network.thrift
(+325 files in other folders)
